<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="action_refresh">Refresh</string>
    <string name="XP_default">Experience</string>
    <string name="HP_default">Health</string>
    <string name="MP_default">Mana</string>
    <string name="PS_settings_title">Settings</string>
    <string name="SP_userID_title">User ID</string>
    <string name="SP_userID_summary">Your User ID</string>
    <string name="SP_APIToken_title">API Token</string>
    <string name="SP_APIToken_summary">Your API Token</string>
    <string name="Language_title">Language</string>
    <string name="Language_summary">Change Habitica\'s language</string>
    <string name="PS_contact_title">Contact me</string>
    <string name="pref_account_header">Account</string>
    <string name="pref_first_day_of_the_week_title">First Day of the Week</string>
    <string name="pref_first_day_of_the_week_summary">First day of the week in all calendars</string>
    <string name="pref_first_day_of_the_week_key" translatable="false">FirstDayOfTheWeek</string>
    <string name="pref_reminder_header">Daily Reminder</string>
    <string name="pref_reminder_checkbox">Activate Reminder</string>
    <string name="pref_reminder_picker">Set Reminder Time</string>
    <string name="pref_cds_header">Custom Day Start</string>
    <string name="pref_push_notifications_checkbox">Use Push Notifications</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="push_notification_system_settings_description">Allow Habitica notifications in the Settings app to receive push notifications</string>
    <string name="push_notification_system_settings_reminders">Allow Habitica notifications in the Settings app to receive reminders</string>
    <string name="exact_alarm_system_settings_reminders">Reminders may be delayed because permissions aren\'t enabled. Tap to view and update permissions.</string>
    <string name="push_notification_system_settings_title">Notifications Disabled</string>
    <string name="push_notifications_sum">Set your push notifications settings</string>
    <string name="exact_alarm_system_settings_title">`Alarm &amp; Reminders` disabled`</string>
    <string name="exact_alarm_system_settings_description">Allow `Alarms &amp; Reminders` in the Settings app to ensure reminders appear at the scheduled time exactly</string>
    <string name="preference_push_you_won_challenge">You won a Challenge!</string>
    <string name="preference_push_received_a_private_message">Received a Private Message</string>
    <string name="preference_push_gifted_gems">Gifted Gems</string>
    <string name="preference_push_gifted_subscription">Gifted Subscription</string>
    <string name="preference_push_invited_to_party">Invited to Party</string>
    <string name="preference_push_invited_to_guild">Invited to Guild</string>
    <string name="preference_push_your_quest_has_begun">Your Quest has Begun</string>
    <string name="preference_push_invited_to_quest">Invited to Quest</string>
    <string name="about_libraries">Libraries</string>
    <string name="about_habitica_open_source">Habitica is available as open source software on Github</string>
    <string name="about_rate_our_app">Rate our App</string>
    <string name="about_give_us_feedback">Send us Feedback!</string>
    <string name="about_bugreport">Report a Bug</string>
    <string name="about_source_code">Source Code</string>
    <string name="network_error_no_network_body">You are not connected to the internet.</string>
    <string name="internal_error_api">Server connection lost</string>
    <string name="authentication_error_title">Authentication Error</string>
    <string name="authentication_error_body">Your Username and/or Password was incorrect.</string>
    <string name="save_changes">Save</string>
    <string name="copy">Copy</string>
    <string name="title">Title</string>
    <string name="notes">Notes</string>
    <string name="difficulty">Difficulty</string>
    <string name="tags">Tags</string>
    <string name="start_date">Start Date</string>
    <string name="positive_habit_form">Positive</string>
    <string name="negative_habit_form">Negative</string>
    <string name="positive_sentence">positive</string>
    <string name="negative_sentence">negative</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="selected">Selected</string>
    <string name="not_selected">Not selected</string>
    <string name="checklist">Checklist</string>
    <string name="reminders">Reminders</string>
    <string name="attributes">Attributes</string>
    <string name="repeatables_frequency_daily">Daily</string>
    <string name="repeatables_frequency_weekly">Weekly</string>
    <string name="repeatables_frequency_monthly">Monthly</string>
    <string name="repeatables_frequency_yearly">Yearly</string>
    <string name="repeatables_frequency_day_of_month">Day of Month</string>
    <string name="repeatables_frequency_day_of_week">Day of Week</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="levelup_header">You Reached Level %1$d!</string>
    <string name="levelup_detail">By accomplishing your real life goals, you leveled up and are now fully healed!</string>
    <string name="onwards">Onwards!</string>
    <string name="faint_subtitle">Don\'t despair!</string>
    <string name="faint_header">You ran out of Health!</string>
    <string name="faint_button">Refill Health &amp; Try Again</string>
    <string name="faint_broken_gear_info">Broken gear can be repurchased from the Market</string>
    <string name="filter">Filter</string>
    <string name="used_skill_without_mana">You used %1$s.</string>
    <string name="new_checklist_item">New checklist entry</string>
    <string name="reminder_title">Remember to check off your tasks</string>
    <string name="skill_progress_title">Using Skill</string>
    <string name="unlock_lvl_11">Unlock at lvl 11</string>
    <string name="forgot_pw_btn">Forgot Password</string>
    <string name="tavern_inn_checkOut">Reactivate your Dailies</string>
    <string name="tavern_inn_rest">Pause your Dailies</string>
    <string name="reward_dialog_buy">Buy</string>
    <string name="reward_dialog_dismiss">Dismiss</string>
    <string name="outfit_head">Head</string>
    <string name="outfit_headAccessory">Head Accessory</string>
    <string name="outfit_eyewear">Eyewear</string>
    <string name="outfit_armor">Armor</string>
    <string name="outfit_back">Back</string>
    <string name="outfit_body">Body</string>
    <string name="outfit_shield">Off-Hand</string>
    <string name="outfit_weapon">Main-Hand</string>
    <string name="all">All</string>
    <string name="clear">Clear</string>
    <string name="report_bug">Report a Bug</string>
    <string name="need_more_help">Need more help?</string>
    <string name="copy_userid">Copy User ID</string>
    <string name="copy_username">Copy Username</string>
    <string name="support_bug_title">We’re constantly trying to make our apps better based on player feedback but sometimes a few bugs pop up…</string>
    <string name="common_fixes">Common Fixes</string>
    <string name="send_bug_prompt">Send a bug report to us and we’ll get back to you!</string>
    <string name="clear_cache">Clear your Cache</string>
    <string name="clear_cache_description"><![CDATA[To clear your cache, open your phone’s Settings app. Go to Storage > Apps >  Habitica, then tap Clear Cache.]]></string>
    <string name="manual_sync_restart">Manual Sync or Restart</string>
    <string name="manual_sync_restart_description">Sometimes the app won’t automatically update content. Try pulling to refresh or force closing the app and reopening it.</string>
    <string name="update_app">Update the App</string>
    <string name="update_app_description">We’re constantly pushing out new fixes, so be sure to check the Play Store to see if there are any updates available.</string>
    <string name="block_user">Block Player</string>
    <string name="enchanted_armoire_drop_rates">Enchanted Armoire Drop Rates</string>
    <string name="armoire_rate_equipment_description">New Equipment pieces are added every month. If you own all pieces of equipment, then you\'ll get Food or Experience, 50/50 odds.</string>
    <string name="armoire_rate_equipment_title">60% Piece of Equipment</string>
    <string name="armoire_rate_food_title">20% Piece of Food</string>
    <string name="armoire_rate_food_description">You’ll receive one of the ten types of Food. During special events, normal foods will change to their cake or candy counterparts.</string>
    <string name="armoire_rate_experience_title">20% Experience points</string>
    <string name="armoire_rate_experience_description">The amount gained varies randomly from 10 to 50</string>
    <string name="purchased">Purchased</string>
    <string name="background_filters">Background Filters</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="sort_by">Sort By</string>
    <string name="january">January</string>
    <string name="febuary">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="display">Display</string>
    <string name="month_released">Month Released</string>
    <string name="ban_user">Ban Player</string>
    <string name="shadow_mute_user">Shadow Mute</string>
    <string name="mute_user">Mute Player</string>
    <string name="quest_mechanics">Quest Mechanics</string>
    <string name="quest_mechanics_boss_title">Damaging a Boss</string>
    <string name="quest_mechanics_boss_description">Complete any type of task or use skills to rack up pending damage! Damage will be applied on your next day reset. Strength affects how much damage you do.</string>
    <string name="quest_mechanics_collecting_title">Collecting Quest items</string>
    <string name="quest_mechanics_collecting_description">When on a Collection Quest, complete your tasks for a random chance to find a Quest item. Pending items will be applied on your next day reset. Perception boosts item rates.</string>
    <string name="quest_mechanics_damage_title">Bosses lash out for missed Dailies</string>
    <string name="quest_mechanics_damage_description">Boss damage is calculated each time a Party member checks in throughout the day. This damage is applied the next time you perform an action that syncs with the server. Boss damage is recorded in your Party’s chat.</string>
    <string name="quest_mechanics_pausing_title">Pausing damage</string>
    <string name="quest_mechanics_pausing_description">"If you’re struggling to complete your Dailies, you can pause damage from Settings for a break. This will prevent the Boss from hurting you or others, but also pause your own damage. Other members missed Dailies will still cause damage, so be careful out there! "</string>
    <string name="quest_mechanics_rage_title">Rage meters</string>
    <string name="quest_mechanics_rage_description">Some difficult bosses have an orange Rage meter under their HP. This meter fills up when participants miss Dailies. When it fills completely, the boss will let out a fearsome attack that does extra damage!</string>
</resources>