<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="16dp"
    android:paddingStart="@dimen/bottom_sheet_inset"
    android:paddingEnd="@dimen/bottom_sheet_inset">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_large">

        <TextView
            style="@style/SubHeader1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/background_filters"
            android:textColor="@color/text_ternary"
            android:layout_gravity="center_vertical"/>
        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/clear_button"
            style="@style/Body1_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/clear"
            android:textColor="@color/text_primary"
            android:textSize="14sp"
            android:gravity="end|center_vertical"
            android:paddingEnd="0dp"
            android:paddingStart="0dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/task_type_title"
        style="@style/Caption3"
        android:textColor="@color/text_quad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/display"
        android:textAllCaps="true"/>
    <RadioGroup
        android:id="@+id/show_me_wrapper"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="28dp">
        <RadioButton
            android:id="@+id/show_all_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            style="@style/TaskFilterRadioButton"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/show_purchased_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchased"
            style="@style/TaskFilterRadioButton"
            android:layout_marginStart="8dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/sort_by_title"
        style="@style/Caption3"
        android:textColor="@color/text_quad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:textAllCaps="true"/>
    <RadioGroup
        android:id="@+id/sort_by_wrapper"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="28dp">
        <RadioButton
            android:id="@+id/newest_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newest"
            style="@style/TaskFilterRadioButton"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/oldest_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oldest"
            style="@style/TaskFilterRadioButton"
            android:layout_marginStart="8dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/month_released_title"
        style="@style/Caption3"
        android:textColor="@color/text_quad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/month_released"
        android:textAllCaps="true"/>
    <LinearLayout
        android:id="@+id/month_released_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="24dp">
        <CheckBox
            android:id="@+id/january_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/january"
            style="@style/FilterMonthCheckbox"
            />
        <CheckBox
            android:id="@+id/febuary_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/febuary"
            style="@style/FilterMonthCheckbox"
            />
        <CheckBox
            android:id="@+id/march_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/march"
            style="@style/FilterMonthCheckbox"
            />
        <CheckBox
            android:id="@+id/april_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/april"
            style="@style/FilterMonthCheckbox"
            />
        <CheckBox
            android:id="@+id/may_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/may"
            style="@style/FilterMonthCheckbox"
            />
        <CheckBox
            android:id="@+id/june_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/june"
            style="@style/FilterMonthCheckbox"
            />
        <CheckBox
            android:id="@+id/july_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/july"
            style="@style/FilterMonthCheckbox"
            />
        <CheckBox
            android:id="@+id/august_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/august"
            style="@style/FilterMonthCheckbox"
            />
        <CheckBox
            android:id="@+id/september_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/september"
            style="@style/FilterMonthCheckbox"
            />
        <CheckBox
            android:id="@+id/october_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/october"
            style="@style/FilterMonthCheckbox"
            />
        <CheckBox
            android:id="@+id/november_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/november"
            style="@style/FilterMonthCheckbox"
            />
        <CheckBox
            android:id="@+id/december_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/december"
            style="@style/FilterMonthCheckbox"
            />
    </LinearLayout>
</LinearLayout>