<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/support_bug_title"
    android:textSize="13sp"
    android:textColor="@color/gray_200"
    android:paddingTop="13dp"
    android:paddingBottom="13dp"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:layout_margin="@dimen/spacing_medium"
    android:gravity="center"
    android:background="@color/gray_700"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/common_fixes"
        android:layout_marginStart="@dimen/spacing_large"
        style="@style/SectionHeaderCaps"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="vertical"
        android:background="@drawable/layout_rounded_bg_gray_700"
        android:layout_margin="@dimen/spacing_medium">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_cache"
            android:textColor="@color/black"
            style="@style/Body1"
            android:layout_marginBottom="4dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_cache_description"
            style="@style/Body2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="vertical"
        android:background="@drawable/layout_rounded_bg_gray_700"
        android:layout_margin="@dimen/spacing_medium">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual_sync_restart"
            android:textColor="@color/black"
            style="@style/Body1"
            android:layout_marginBottom="4dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual_sync_restart_description"
            style="@style/Body2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="vertical"
        android:background="@drawable/layout_rounded_bg_gray_700"
        android:layout_margin="@dimen/spacing_medium">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_app"
            android:textColor="@color/black"
            style="@style/Body1"
            android:layout_marginBottom="4dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_app_description"
            style="@style/Body2"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/need_more_help"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/brand_300"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/spacing_large"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_bug_prompt"
        android:textColor="@color/gray_300"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginBottom="@dimen/spacing_large"/>
    <Button
        android:id="@+id/report_bug_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        style="@style/HabiticaButton.Purple"
        android:text="@string/report_bug"
        android:elevation="0dp"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_large" />
</LinearLayout>