<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:parentTag="android.widget.LinearLayout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="19dp">
        <com.habitrpg.android.habitica.ui.views.equipment.EquipmentOverviewItem
            android:id="@+id/weapon_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:title="@string/outfit_weapon" />
        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp" />
        <com.habitrpg.android.habitica.ui.views.equipment.EquipmentOverviewItem
            android:id="@+id/shield_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:title="@string/outfit_shield" />
        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp" />
        <com.habitrpg.android.habitica.ui.views.equipment.EquipmentOverviewItem
            android:id="@+id/head_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:title="@string/outfit_head" />
        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp" />
        <com.habitrpg.android.habitica.ui.views.equipment.EquipmentOverviewItem
            android:id="@+id/armor_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:title="@string/outfit_armor" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="6dp">
        <com.habitrpg.android.habitica.ui.views.equipment.EquipmentOverviewItem
            android:id="@+id/head_accessory_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:title="@string/outfit_headAccessory" />
        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp" />
        <com.habitrpg.android.habitica.ui.views.equipment.EquipmentOverviewItem
            android:id="@+id/body_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:title="@string/outfit_body" />
        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp" />
        <com.habitrpg.android.habitica.ui.views.equipment.EquipmentOverviewItem
            android:id="@+id/back_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:title="@string/outfit_back" />
        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp" />
        <com.habitrpg.android.habitica.ui.views.equipment.EquipmentOverviewItem
            android:id="@+id/eyewear_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:title="@string/outfit_eyewear" />
    </LinearLayout>
</merge>